data/derived/comb/progs/unify/prog6148.ml.out
Characters 176-177:
  let (_,l1,l2) = List.fold_left fold_fn base l in (l1,l2);;
                                              ^
Error: This expression has type int but an expression was expected of type
         'a list
